--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
         <a class="header__logo" href="#"><i class="fa-brands fa-apple">Apple</i></a>
         <nav class="navbar">
             <a href="#home">home</a>
-            <a href="#home">features</a>
-            <a href="#home">products</a>
-            <a href="#home">categories</a>
-            <a href="#home">review</a>
-            <a href="#home">blogs</a>
+            <a href="#features">features</a>
+            <a href="#products">products</a>
+            <a href="#categories">categories</a>
+            <a href="#review">review</a>
         </nav>
 
         <div class="icons">
@@ -329,12 +328,11 @@
 
             <div class="box">
                 <h3>quick links</h3>
-                <a href="#" class="links"> <i class="fas fa-arrow-right"></i> home </a>
-                <a href="#" class="links"> <i class="fas fa-arrow-right"></i> features </a>
-                <a href="#" class="links"> <i class="fas fa-arrow-right"></i> products </a>
-                <a href="#" class="links"> <i class="fas fa-arrow-right"></i> categories </a>
-                <a href="#" class="links"> <i class="fas fa-arrow-right"></i> review </a>
-                <a href="#" class="links"> <i class="fas fa-arrow-right"></i> blogs </a>
+                <a href="#home" class="links"> <i class="fas fa-arrow-right"></i> home </a>
+                <a href="#features" class="links"> <i class="fas fa-arrow-right"></i> features </a>
+                <a href="#products" class="links"> <i class="fas fa-arrow-right"></i> products </a>
+                <a href="#categories" class="links"> <i class="fas fa-arrow-right"></i> categories </a>
+                <a href="#review" class="links"> <i class="fas fa-arrow-right"></i> review </a>
             </div>
 
             <div class="box">
